--- a/crs_application/config/crs.yaml
+++ b/crs_application/config/crs.yaml
@@ -2,8 +2,8 @@ crs:
   general: {}
   motion_planning:
     home_position:
-      joint_names: []
-      joint_position: []
+      joint_names: ["j1"]
+      joint_position: [0.0]
     process_path:
       tool_speed: 0.05
       offset_pose: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0] # [px, py, pz, rx, ry, rz] relative to default tool
@@ -22,12 +22,12 @@ crs:
       - pose: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
       - pose: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
       - pose: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
-    tool_frame: "camera"
+    tool_frame: "camera" 
     skip_on_failure: true
   process_execution:
     time_tolerance: 5.0 # seconds
     joint_tolerance: [0.035, 0.035, 0.035, 0.035, 0.035, 0.035] # radians
   part_registration:
-    part_file: ""      # relative to known data directory
-    toolpath_file: ""  # relative to known data directory
+    part_file: "null"      # relative to known data directory
+    toolpath_file: "null"  # relative to known data directory
   part_rework: {}
