--- a/crs_gui/package.xml
+++ b/crs_gui/package.xml
@@ -21,6 +21,7 @@
   <depend>crs_msgs</depend>
   <depend>crs_motion_planning</depend>
   <depend>pluginlib</depend>
+  <depend>yaml-cpp</depend>
   <exec_depend>xterm</exec_depend>
 
   <export>
