--- a/crs_motion_planning/package.xml
+++ b/crs_motion_planning/package.xml
@@ -42,7 +42,7 @@
 
   <depend>tf2</depend>
 
-  <depend>yaml-cpp</depend>
+  <depend>yaml_cpp_vendor</depend>
   <depend>action_msgs</depend>
   <depend>visualization_msgs</depend>
 
