--- a/crs_application/package.xml
+++ b/crs_application/package.xml
@@ -16,7 +16,8 @@
   <depend>tf2_eigen</depend>
   <depend>rclcpp_action</depend>
   <depend>control_msgs</depend>
-  <depend>yaml_cpp_vendor</depend>  
+  <depend>yaml_cpp_vendor</depend> 
+  <depend>crs_motion_planning</depend> 
   
   <exec_depend>launch_xml</exec_depend>
 
