Added ability to move UR base to preset locations
Added support for cartesian trajectories in main application

--- a/crs_motion_planning/CMakeLists.txt
+++ b/crs_motion_planning/CMakeLists.txt
@@ -24,6 +24,7 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_action REQUIRED)
 
 find_package(crs_msgs REQUIRED)
+find_package(cartesian_trajectory_msgs REQUIRED)
 
 find_package(tesseract_motion_planners REQUIRED)
 find_package(tesseract_rosutils REQUIRED)
@@ -54,6 +55,8 @@ add_library(${PROJECT_NAME}_path_processing_utils SHARED src/path_processing_uti
 target_include_directories(${PROJECT_NAME}_path_processing_utils PUBLIC
   "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
   "$<INSTALL_INTERFACE:include>"
+  ${rclcpp_INCLUDE_DIRS}
+  ${rclcpp_action_INCLUDE_DIRS}
   ${geometry_msgs_INCLUDE_DIRS}
   ${trajectory_msgs_INCLUDE_DIRS}
   ${tf2_INCLUDE_DIRS}
@@ -61,8 +64,13 @@ target_include_directories(${PROJECT_NAME}_path_processing_utils PUBLIC
   ${tf2_ros_INCLUDE_DIRS}
   ${tf2_geometry_msgs_INCLUDE_DIRS}
   ${control_msgs_INCLUDE_DIRS}
+  ${crs_msgs_INCLUDE_DIRS}
+  ${cartesian_trajectory_msgs_INCLUDE_DIRS}
   )
 target_link_libraries(${PROJECT_NAME}_path_processing_utils
+  ${YAML_CPP_LIBRARIES}
+  ${rclcpp_LIBRARIES}
+  ${rclcpp_action_LIBRARIES}
   ${geometry_msgs_LIBRARIES}
   ${trajectory_msgs_LIBRARIES}
   ${tf2_LIBRARIES}
@@ -70,10 +78,13 @@ target_link_libraries(${PROJECT_NAME}_path_processing_utils
   ${tf2_ros_LIBRARIES}
   ${tf2_geometry_msgs_LIBRARIES}
   ${control_msgs_LIBRARIES}
+  ${cartesian_trajectory_msgs_LIBRARIES}
   ${yaml_cpp_vendor_LIBRARIES}
+  ${crs_msgs_LIBRARIES}
   tesseract::tesseract_common
   Eigen3::Eigen
   iterative_spline_parameterization::iterative_spline_parameterization
+  tesseract::tesseract
   )
 
 add_library(${PROJECT_NAME}_path_planning_utils SHARED src/path_planning_utils.cpp)
@@ -100,7 +111,6 @@ target_link_libraries(${PROJECT_NAME}_path_planning_utils
   ${tf2_geometry_msgs_LIBRARIES}
   ${control_msgs_LIBRARIES}
   ur_ikfast_kinematics::ur10e_ikfast
-  tesseract::tesseract
   tesseract::tesseract_motion_planners_trajopt
   tesseract::tesseract_motion_planners_ompl
   tesseract::tesseract_motion_planners_descartes
@@ -166,6 +176,7 @@ target_include_directories(${PROJECT_NAME}_process_planner_test PUBLIC
   ${tf2_eigen_INCLUDE_DIRS}
   ${tf2_ros_INCLUDE_DIRS}
   ${control_msgs_INCLUDE_DIRS}
+  ${cartesian_trajectory_msgs_INCLUDE_DIRS}
   )
 target_link_libraries(${PROJECT_NAME}_process_planner_test
   ${PROJECT_NAME}_path_planning_utils
@@ -181,6 +192,7 @@ target_link_libraries(${PROJECT_NAME}_process_planner_test
   ${tf2_eigen_LIBRARIES}
   ${tf2_ros_LIBRARIES}
   ${control_msgs_LIBRARIES}
+  ${cartesian_trajectory_msgs_LIBRARIES}
   ${visualization_msgs_LIBRARIES}
   )
 
