--- a/crs_msgs/CMakeLists.txt
+++ b/crs_msgs/CMakeLists.txt
@@ -20,6 +20,7 @@ set(SRV_DEPS
   std_msgs
   geometry_msgs
   trajectory_msgs
+  cartesian_trajectory_msgs
 )
 
 # find dependencies
@@ -30,6 +31,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(std_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(trajectory_msgs REQUIRED)
+find_package(cartesian_trajectory_msgs REQUIRED)
 
 set(MSG_FILES
   msg/ProcessConfiguration.msg
@@ -50,9 +52,14 @@ set(SRV_FILES
   srv/CropToolpaths.srv
 )
 
+set(ACTION_FILES
+  action/CartesianComplianceTrajectory.action
+)
+
 rosidl_generate_interfaces(${PROJECT_NAME}
   ${MSG_FILES}
   ${SRV_FILES}
+  ${ACTION_FILES}
   DEPENDENCIES ${SRV_DEPS}
 )
 
