--- a/crs_motion_execution/package.xml
+++ b/crs_motion_execution/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>crs_motion_planning</name>
+  <name>crs_motion_execution</name>
   <version>0.0.0</version>
-  <description>Motion Planning nodes and library for the CRS project</description>
-  <maintainer email="jrgichodevel@gmail.com">ros-industrial</maintainer>
+  <description>Motion Execution nodes and library for the CRS project</description>
+  <maintainer email="tylermarr17@gmail.com">ros-industrial</maintainer>
   <license>BSD</license>
 
   <buildtool_depend>ament_cmake</buildtool_depend>
@@ -18,11 +18,9 @@
   <depend>geometry_msgs</depend>
   <depend>trajectory_msgs</depend>
   <depend>sensor_msgs</depend>
-  <depend>std_srvs</depend>
   <depend>std_msgs</depend>
   <depend>crs_msgs</depend>
   <depend>control_msgs</depend>
-  <depend>cartesian_trajectory_msgs</depend>
 
   <depend>tesseract_msgs</depend>
   <depend>tesseract</depend>
@@ -30,8 +28,6 @@
   <depend>tesseract_rosutils</depend>
   <depend>tesseract_kinematics</depend>
   <depend>tesseract_visualization</depend>
-
-  <depend>ur_ikfast_kinematics</depend>
 
   <depend>trajopt</depend>
   <depend>trajopt_utils</depend>
@@ -42,13 +38,9 @@
   <depend>descartes_samplers</depend>
 
   <depend>tf2</depend>
-  
-  <depend>iterative_spline_parameterization</depend>
 
-  <depend>yaml_cpp_vendor</depend>
   <depend>action_msgs</depend>
-  <depend>visualization_msgs</depend>
-  
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
