--- a/crs_msgs/package.xml
+++ b/crs_msgs/package.xml
@@ -15,6 +15,7 @@
   <depend>std_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>trajectory_msgs</depend>
+  <depend>cartesian_trajectory_msgs</depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
 
