Added transform to scan manager

--- a/crs_application/CMakeLists.txt
+++ b/crs_application/CMakeLists.txt
@@ -21,9 +21,15 @@ find_package(rclcpp REQUIRED)
 find_package(rclcpp_components REQUIRED)
 find_package(crs_msgs REQUIRED)
 find_package(tf2_eigen REQUIRED)
+find_package(tf2_ros REQUIRED)
 find_package(scxml_core REQUIRED)
+find_package(PCL REQUIRED COMPONENTS common)
 find_package(Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Eigen3 REQUIRED NO_MODULE)
+
+#include_directories(include
+#  SYSTEM
+#  ${PCL_INCLUDE_DIRS})
 
 ##################################
 # build
@@ -36,6 +42,7 @@ add_library(${PROJECT_NAME} SHARED
 	src/task_managers/motion_planning_manager.cpp
 	src/task_managers/process_execution_manager.cpp)
 target_link_libraries(${PROJECT_NAME} 
+  ${PCL_LIBRARIES}
   scxml_core::scxml_core
   Eigen3::Eigen
 )
@@ -43,7 +50,8 @@ target_include_directories(${PROJECT_NAME} PUBLIC
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     "$<INSTALL_INTERFACE:include>")
 target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC)
-ament_target_dependencies(${PROJECT_NAME} rclcpp rclcpp_components crs_msgs tf2_eigen)
+target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC ${PCL_INCLUDE_DIRS})
+ament_target_dependencies(${PROJECT_NAME} rclcpp rclcpp_components crs_msgs tf2_eigen tf2_ros)
 
 add_executable(${PROJECT_NAME}_node src/crs_application.cpp)
 target_link_libraries(${PROJECT_NAME}_node 
