Switch industrial CI branch to one that has fixed the rosdep issue

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,8 +54,9 @@ jobs:
         directories:
           - $HOME/.ccache
 
+# Changed from master to fix https://github.com/ros-industrial/industrial_ci/issues/475
 install:
-  - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
+  - git clone --quiet --depth 1 https://github.com/ipa-mdl/industrial_ci.git .industrial_ci -b revert-revert-colcon-chain
 
 script:
   - .industrial_ci/travis.sh
