fixes aftr rebasing master

--- a/crs_gui/CMakeLists.txt
+++ b/crs_gui/CMakeLists.txt
@@ -98,7 +98,7 @@ target_include_directories(${PROJECT_NAME}_widgets PUBLIC ${crs_area_selection_I
        endif()
     endif()
   endforeach()
-target_link_libraries(${PROJECT_NAME}_widgets
+target_link_libraries(${PROJECT_NAME}_widgets PUBLIC
   Qt5::Widgets
   crs_area_selection::crs_area_selection_area_selection
   crs_motion_planning::crs_motion_planning_path_processing_utils
