--- a/crs_application/package.xml
+++ b/crs_application/package.xml
@@ -18,6 +18,7 @@
   <depend>control_msgs</depend>
   <depend>yaml_cpp_vendor</depend> 
   <depend>crs_motion_planning</depend> 
+  <depend>moveit_ros_planning_interface</depend>
   
   <exec_depend>launch_xml</exec_depend>
 
