--- a/crs_application/CMakeLists.txt
+++ b/crs_application/CMakeLists.txt
@@ -30,6 +30,7 @@ find_package(Qt5 REQUIRED COMPONENTS Widgets)
 find_package(crs_motion_planning REQUIRED)
 find_package(Eigen3 REQUIRED NO_MODULE)
 find_package(yaml_cpp_vendor REQUIRED)
+find_package(gazebo_msgs REQUIRED)
 
 ##################################
 # build
@@ -37,6 +38,7 @@ find_package(yaml_cpp_vendor REQUIRED)
 add_library(${PROJECT_NAME} SHARED
 	src/crs_executive.cpp 
 	src/common/config.cpp
+	src/common/simulation_object_spawner.cpp
 	src/task_managers/scan_acquisition_manager.cpp
 	src/task_managers/part_registration_manager.cpp
 	src/task_managers/part_rework_manager.cpp
@@ -51,17 +53,21 @@ target_include_directories(${PROJECT_NAME} PUBLIC
     "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
     "$<INSTALL_INTERFACE:include>")
 target_include_directories(${PROJECT_NAME} SYSTEM PUBLIC)
-ament_target_dependencies(${PROJECT_NAME} rclcpp rclcpp_components crs_msgs crs_motion_planning control_msgs tf2_eigen rclcpp_action yaml_cpp_vendor)
+ament_target_dependencies(${PROJECT_NAME} 
+ rclcpp
+ rclcpp_components
+ crs_msgs
+ crs_motion_planning
+ control_msgs
+ tf2_eigen
+ rclcpp_action
+ yaml_cpp_vendor
+ gazebo_msgs)
 
 add_executable(${PROJECT_NAME}_node src/crs_application.cpp)
 target_link_libraries(${PROJECT_NAME}_node 
   ${PROJECT_NAME}
 )
-#target_include_directories(${PROJECT_NAME}_node PUBLIC
-#    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
-#    "$<INSTALL_INTERFACE:include>")
-#target_include_directories(${PROJECT_NAME}_node SYSTEM PUBLIC)
-#ament_target_dependencies(${PROJECT_NAME}_node rclcpp rclcpp_components crs_msgs control_msgs tf2_eigen rclcpp_action)
 
 ##################################
 # install
