--- a/crs_application/package.xml
+++ b/crs_application/package.xml
@@ -17,7 +17,8 @@
   <depend>rclcpp_action</depend>
   <depend>control_msgs</depend>
   <depend>yaml_cpp_vendor</depend> 
-  <depend>crs_motion_planning</depend> 
+  <depend>crs_motion_planning</depend>   
+  <depend>gazebo_msgs</depend>
   
   <exec_depend>launch_xml</exec_depend>
 
