--- a/crs_perception/CMakeLists.txt
+++ b/crs_perception/CMakeLists.txt
@@ -29,7 +29,7 @@ find_package(sensor_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
-find_package(PCL REQUIRED)
+find_package(PCL 1.7 REQUIRED)
 find_package(VTK REQUIRED NO_MODULE)
 
 include_directories(include
