--- a/crs_application/config/localization.yaml
+++ b/crs_application/config/localization.yaml
@@ -1,17 +1,28 @@
 general:
   mesh_num_samples: 100000
-  leaf_size: 0.01
+  leaf_size: 0.02
   part_frame: "part"
   enable_debug_visualizations: True
 icp:
   max_correspondence_dist: 0.02
-  max_iter: 200
-  transformation_eps: 1e-2
+  max_iter: 500
+  transformation_eps: 1e-16
+  rotation_eps: 1e-16  # transformation rotation epsilon in order for an optimization to be considered as having converged to the final solution (epsilon is the cos(angle) 
   euclidean_fitness: 1.0
+  ransac_threshold: 0.05
+sac:
+  normal_est_rad: 0.1
+  feature_est_rad: 0.04
+  max_iters: 10000
+  num_samples: 3
+  correspondence_rand: 5
+  similarity_threshold: 0.1
+  max_correspondence_dist: 0.02
+  inlier_fraction: 0.25
 crop_boxes:
   box1:
     xyz: [-0.6, 0.0, 1.0]
-    size: [1.4, 2.0, 0.6]
+    size: [2.0, 2.0, 0.6]
     reverse: True
   box2:
     xyz: [-0.6, 0.0, 0.56]
