--- a/crs_application/config/localization.yaml
+++ b/crs_application/config/localization.yaml
@@ -11,7 +11,7 @@ icp:
   euclidean_fitness: 1.0
   ransac_threshold: 0.05
   use_correspondences: False
-  use_cog_aligment: False
+  use_cog_alignment: False
 sac:
   normal_est_rad: 0.1
   feature_est_rad: 0.04
