--- a/crs_application/config/part_localization.yaml
+++ b/crs_application/config/part_localization.yaml
@@ -23,14 +23,14 @@ sac:
   inlier_fraction: 0.25
 crop_boxes:
   box1:
-    xyz: [-0.4, 0.0, 1.15]
-    size: [2.0, 2.0, 0.8]
+    xyz: [0.0, -0.875, -0.25]
+    size: [2.0, 0.4, 0.2]
     reverse: True
   box2:
-    xyz: [-0.4, 0.0, 0.56]
-    size: [0.7, 3.0, 0.8]
+    xyz: [0.0, -0.875, -0.45]
+    size: [2.0, 3.0, 0.2]
     reverse: False # deletes what's inside the box
-  box3:
-    xyz: [0.25, -0.8, 1.3]
-    size: [0.5, 0.5, 0.5]
-    reverse: False # deletes what's inside the box
+  #box3:
+  #  xyz: [0.25, -0.8, 1.3]
+  #  size: [0.5, 0.5, 0.5]
+  #  reverse: False # deletes what's inside the box
