--- a/crs_application/config/crs.yaml
+++ b/crs_application/config/crs.yaml
@@ -11,9 +11,12 @@ crs:
       retreat_dist: 0.03
       approach_dist: 0.03
       tool_frame: "sander_center_link"
+      target_force: 50
     media_change:
       change_time: 300.0 # seconds
       change_pose: [-0.381, -0.202, 1.5, 0.0, -0.786, 1.57] # [px, py, pz, rx, ry, rz] in world coordinates
+      joint_names: [shoulder_pan_joint, shoulder_lift_joint, elbow_joint, wrist_1_joint, wrist_2_joint, wrist_3_joint]
+      joint_position: [-0.02467, -1.7719, -1.8680, -0.6212, 0.90265, -2.2430]
     preview:
       time_scaling: 1.0
   scan_acquisition: 
@@ -28,6 +31,9 @@ crs:
   process_execution:
     time_tolerance: 5.0 # seconds
     joint_tolerance: [0.035, 0.035, 0.035, 0.035, 0.035, 0.035] # radians
+    cartesian_tolerance: [0.015, 0.015, 0.02, 0.05, 0.05, 0.05]
+    force_tolerance: 5
+    force_controlled_trajectories: true
   part_registration:
     simulation_pose: [-0.7, 0.0, 1.1, 0.0, 0.0, 0.0]  # used for simulator only
     seed_pose: [0.0, 0.0, 0.5, 0.0, 0.0, 0.0]
