--- a/crs_application/config/crs.yaml
+++ b/crs_application/config/crs.yaml
@@ -31,12 +31,10 @@ crs:
   process_execution:
     time_tolerance: 5.0 # seconds
     joint_tolerance: [0.035, 0.035, 0.035, 0.035, 0.035, 0.035] # radians
-    cartesian_path_tolerance: [0.015, 0.015, 0.025, 0.15, 0.15, 0.15]
-    cartesian_goal_tolerance: [0.01, 0.01, 0.01, 0.05, 0.05, 0.05]
+    cartesian_tolerance: [0.015, 0.015, 0.02, 0.05, 0.05, 0.05]
+    target_force: 75
     force_tolerance: 5
     force_controlled_trajectories: true
-    ur_tool_change_script: 'simpleMove.urp'
-    execute_tool_change: false
   part_registration:
     simulation_pose: [-0.7, 0.0, 1.1, 0.0, 0.0, 0.0]  # used for simulator only
     seed_pose: [0.0, 0.0, 0.5, 0.0, 0.0, 0.0]
