--- a/crs_application/config/crs.yaml
+++ b/crs_application/config/crs.yaml
@@ -28,6 +28,10 @@ crs:
   process_execution:
     time_tolerance: 5.0 # seconds
     joint_tolerance: [0.035, 0.035, 0.035, 0.035, 0.035, 0.035] # radians
+    cartesian_tolerance: [0.015, 0.015, 0.02, 0.05, 0.05, 0.05]
+    target_force: 75
+    force_tolerance: 5
+    force_controlled_trajectories: true
   part_registration:
     simulation_pose: [-0.7, 0.0, 1.1, 0.0, 0.0, 0.0]  # used for simulator only
     seed_pose: [0.0, 0.0, 0.5, 0.0, 0.0, 0.0]
