--- a/crs_perception/CMakeLists.txt
+++ b/crs_perception/CMakeLists.txt
@@ -29,7 +29,11 @@ find_package(sensor_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 find_package(tf2_geometry_msgs REQUIRED)
 find_package(visualization_msgs REQUIRED)
-find_package(PCL 1.7 REQUIRED)
+find_package(cv_bridge REQUIRED)
+find_package(tf2_eigen REQUIRED)
+find_package(pcl_conversions REQUIRED)
+find_package(region_detection_core REQUIRED	)
+find_package(PCL 1.8 REQUIRED)
 find_package(VTK REQUIRED NO_MODULE)
 
 include_directories(include
@@ -53,14 +57,38 @@ ament_target_dependencies(${PROJECT_NAME}_nodes rclcpp rclcpp_components crs_msg
 add_executable(localize_to_part src/nodes/localize_to_part.cpp)
 target_link_libraries(localize_to_part ${PROJECT_NAME} ${PCL_LIBRARIES})
 ament_target_dependencies(localize_to_part rclcpp rclcpp_components crs_msgs tf2_ros std_msgs visualization_msgs)
-install(TARGETS localize_to_part
-DESTINATION lib/${PROJECT_NAME})
+#install(TARGETS localize_to_part
+#DESTINATION lib/${PROJECT_NAME})
+
+# crop trajectory executable
+add_executable(toolpath_crop_node src/nodes/toolpath_crop_node.cpp)
+target_include_directories(toolpath_crop_node PUBLIC
+    "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
+    "$<INSTALL_INTERFACE:include>")
+target_include_directories(toolpath_crop_node SYSTEM PUBLIC)
+target_link_libraries(toolpath_crop_node 
+	region_detection_core::region_detection_core)
+ament_target_dependencies(toolpath_crop_node
+	rclcpp rclcpp_components
+	crs_msgs
+	visualization_msgs
+	tf2_eigen
+	pcl_conversions
+	cv_bridge
+	tf2_ros
+	std_msgs
+	sensor_msgs
+	visualization_msgs)
+#install(TARGETS toolpath_crop_node
+#DESTINATION lib/${PROJECT_NAME})
 
 # test executable
 add_executable(test_localize_to_part src/nodes/test_localize_to_part.cpp)
 target_link_libraries(test_localize_to_part ${PROJECT_NAME} ${PCL_LIBRARIES})
 ament_target_dependencies(test_localize_to_part rclcpp crs_msgs std_msgs)
-install(TARGETS test_localize_to_part
+
+### Install
+install(TARGETS localize_to_part toolpath_crop_node test_localize_to_part
 DESTINATION lib/${PROJECT_NAME})
 
 install(DIRECTORY include/
