implemented PartReworkConfig parsing

--- a/crs_application/config/crs.yaml
+++ b/crs_application/config/crs.yaml
@@ -34,4 +34,13 @@ crs:
     target_frame_id: "world"
     part_file: "null"      # relative to known data directory
     toolpath_file: "null"  # relative to known data directory
-  part_rework: {}
+  part_rework: 
+    scan_poses:
+      - pose: [0.0, -0.50, 1.7, 0.0, -2.35619, 1.57]
+      - pose: [0.0, -0.25, 1.7, 0.0, -2.35619, 1.57]
+      - pose: [0.0, -0.10, 1.7, 0.5, -2.35619, 1.57]
+      - pose: [0.0, 0.0, 1.7, 0.0, -2.35619, 1.57]
+      - pose: [0.0, 0.1, 1.7, -0.8, -2.35619, 1.57]
+    tool_frame: "camera_link_optical" 
+    pre_acquisition_pause: 2.0 # seconds
+    skip_on_failure: true
