--- a/crs_application/config/crs.yaml
+++ b/crs_application/config/crs.yaml
@@ -36,6 +36,8 @@ crs:
     cartesian_goal_tolerance: [0.01, 0.01, 0.01, 0.05, 0.05, 0.05]
     force_tolerance: 5
     force_controlled_trajectories: true
+    ur_tool_change_script: 'simpleMove.urp'
+    execute_tool_change: false
   part_registration:
     simulation_pose: [-0.7, 0.0, 1.1, 0.0, 0.0, 0.0]  # used for simulator only
     seed_pose: [0.0, 0.0, 0.5, 0.0, 0.0, 0.0]
