--- a/crs_process_data/data/surrogate1/toolpaths/part_2/crs.yaml
+++ b/crs_process_data/data/surrogate1/toolpaths/part_2/crs.yaml
@@ -1,50 +1,56 @@
 crs:
   general: {}
   motion_planning:
-    pre_move_home: true
+    pre_move_home: false
     home_position:
       joint_names: [shoulder_pan_joint, shoulder_lift_joint, elbow_joint, wrist_1_joint, wrist_2_joint, wrist_3_joint]
-      joint_position: [-0.9644, -1.3617, 2.0724, -0.7108, -0.9640, 0.7994]
+      joint_position: [-1.8444, -1.85261, -1.6167, -1.6665, 0.8773, -0.9489]
     process_path:
-      tool_speed: 0.1
-      offset_pose: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0] # [px, py, pz, rx, ry, rz] relative to default tool
-      retreat_dist: 0.03
-      approach_dist: 0.03
-      tool_frame: "sander_center_link"
+      tool_speed: 0.05
+      offset_pose: [0.0, 0.0, 0.04, 0.0, 0.0, 0.0]
+      retreat_dist: 0.04
+      approach_dist: 0.04
+      tool_frame: sander_center_link
+      target_force: 15
     media_change:
-      change_time: 300.0 # seconds
-      change_pose: [-0.381, -0.202, 1.5, 0.0, -0.786, 1.57] # [px, py, pz, rx, ry, rz] in world coordinates
+      change_time: 110.0
+      change_pose: [0.771, -0.279, 0.220, 3.138, -0.005, -0.486]
+      joint_names: [shoulder_pan_joint, shoulder_lift_joint, elbow_joint, wrist_1_joint, wrist_2_joint, wrist_3_joint]
+      joint_position: [-0.02467, -1.7719, -1.8680, -0.6212, 0.90265, -2.2430]
     preview:
       time_scaling: 4.0 # larger values will play the preview faster
   scan_acquisition: 
     scan_poses:
-      - pose: [-1.444, -0.322, 1.495, 2.5029407, 0.9721462, -2.3962962]
-      - pose: [-0.869, -0.397, 1.559, -3.1289652, 0.6427091, 3.1099935]
-      - pose: [0.005, 0.621, 1.534, -2.6741055, -0.6119461, -1.9862345]
-      - pose: [-0.348, -0.211, 1.555, -2.2509677, -0.1362007, -3.0876068]
-      - pose: [0.036, 0.258, 1.549, -2.4653191, -0.7150566, 2.9155958]
-      - pose: [-0.201, -0.062, 1.604, 2.4117773, -0.3157807, -2.7579127]
-      - pose: [-0.045, 0.794, 1.580, 2.3330813, -0.3216955, -2.8142385]
-    tool_frame: "camera_link_optical" 
+      - pose: [0.701, -0.402, 0.189, 2.393, 0.115, -0.280]
+      - pose: [0.638, -0.913, 0.258, 2.8819846, 0.1335439, -1.1955488]
+      - pose: [0.334, -1.005, 0.273, 3.067, -0.042, 0.175]
+      - pose: [0.111, -0.972, 0.307, 3.049, -0.064, -0.074]
+      # - pose: [0.274, -0.982, 0.189, -3.1054148, -0.0123395, -0.8671079]
+      # - pose: [0.668, -0.423, 0.320, 2.232, -0.014, -0.457]
+      # - pose: [0.794, -0.412, 0.320, 2.233, -0.016, -0.745]
+    tool_frame: camera_link_optical
     skip_on_failure: true
   process_execution:
-    time_tolerance: 5.0 # seconds
-    joint_tolerance: [0.035, 0.035, 0.035, 0.035, 0.035, 0.035] # radians
+    time_tolerance: 120.0
+    joint_tolerance: [0.035, 0.035, 0.035, 0.035, 0.035, 0.035]
+    cartesian_path_tolerance: [0.015, 0.015, 0.035, 0.15, 0.15, 0.15]
+    cartesian_goal_tolerance: [0.01, 0.01, 0.025, 0.05, 0.05, 0.05]
+    force_tolerance: 5
+    force_controlled_trajectories: false
+    ur_tool_change_script: 'simpleMove.urp'
+    execute_tool_change: false
   part_registration:
-    simulation_pose: [-0.7, 0.0, 1.1, 0.0, 0.0, 1.57]
-    seed_pose: [-0.68, 0.0, 1.0, 0.0, 0.0, 1.57]
-    target_frame_id: "world"
-    part_file: "null"      # relative to known data directory
-    toolpath_file: "null"  # relative to known data directory
+    simulation_pose: [0.45, -1.04, -0.23, 0.0, 0.0, 3.14]
+    seed_pose: [0.45, -1.04, -0.23, 0.0, 0.0, 3.14]
+    target_frame_id: world
+    part_file: null
+    toolpath_file: null
   part_rework: 
     scan_poses:
-      - pose: [-1.444, -0.322, 1.495, 2.5029407, 0.9721462, -2.3962962]
-      - pose: [-0.869, -0.397, 1.559, -3.1289652, 0.6427091, 3.1099935]
-      - pose: [0.005, 0.621, 1.534, -2.6741055, -0.6119461, -1.9862345]
-      - pose: [-0.348, -0.211, 1.555, -2.2509677, -0.1362007, -3.0876068]
-      - pose: [0.036, 0.258, 1.549, -2.4653191, -0.7150566, 2.9155958]
-      - pose: [-0.201, -0.062, 1.604, 2.4117773, -0.3157807, -2.7579127]
-      - pose: [-0.045, 0.794, 1.580, 2.3330813, -0.3216955, -2.8142385]
+      - pose: [0.111, -0.972, 0.307, 3.049, -0.064, -0.074]
+      - pose: [0.638, -0.913, 0.258, 2.8819846, 0.1335439, -1.1955488]
+      - pose: [0.334, -1.005, 0.273, 3.067, -0.042, 0.175]
+      - pose: [0.701, -0.402, 0.189, 2.393, 0.115, -0.280]
     tool_frame: "camera_link_optical" 
     pre_acquisition_pause: 2.0 # seconds
     skip_on_failure: true
