--- a/crs_application/config/part_localization.yaml
+++ b/crs_application/config/part_localization.yaml
@@ -23,9 +23,13 @@ sac:
   inlier_fraction: 0.25
 crop_boxes:
   box1:
-    xyz: [0.0, -1.0, -0.18]
-    size: [2.5, 0.6, 0.3]
+    xyz: [0.0, 0.8, 0.2]
+    size: [2.0, 0.4, 1.0]
     reverse: True
+  #box1:
+  #  xyz: [0.0, -1.0, -0.25]
+  #  size: [2.5, 0.6, 0.3]
+  #  reverse: True
   box2:
     xyz: [0.0, -0.875, -0.48]
     size: [2.5, 3.0, 0.2]
