--- a/crs_process_data/data/surrogate1/toolpaths/part_2/crs.yaml
+++ b/crs_process_data/data/surrogate1/toolpaths/part_2/crs.yaml
@@ -6,12 +6,12 @@ crs:
       joint_names: [shoulder_pan_joint, shoulder_lift_joint, elbow_joint, wrist_1_joint, wrist_2_joint, wrist_3_joint]
       joint_position: [-1.8444, -1.85261, -1.6167, -1.6665, 0.8773, -0.9489]
     process_path:
-      tool_speed: 0.05
-      offset_pose: [0.0, 0.0, 0.04, 0.0, 0.0, 0.0]
-      retreat_dist: 0.04
-      approach_dist: 0.04
+      tool_speed: 0.1
+      offset_pose: [0.0, 0.0, 0.00, 0.0, 0.0, 0.0]
+      retreat_dist: 0.01
+      approach_dist: 0.01
       tool_frame: sander_center_link
-      target_force: 15
+      target_force: 50
     media_change:
       change_time: 110.0
       change_pose: [0.771, -0.279, 0.220, 3.138, -0.005, -0.486]
@@ -33,10 +33,10 @@ crs:
   process_execution:
     time_tolerance: 120.0
     joint_tolerance: [0.035, 0.035, 0.035, 0.035, 0.035, 0.035]
-    cartesian_path_tolerance: [0.015, 0.015, 0.035, 0.15, 0.15, 0.15]
-    cartesian_goal_tolerance: [0.01, 0.01, 0.025, 0.05, 0.05, 0.05]
-    force_tolerance: 5
-    force_controlled_trajectories: false
+    cartesian_path_tolerance: [0.015, 0.015, 0.05, 0.15, 0.15, 0.15]
+    cartesian_goal_tolerance: [0.01, 0.01, 0.035, 0.05, 0.05, 0.05]
+    force_tolerance: 10
+    force_controlled_trajectories: true
     ur_tool_change_script: 'simpleMove.urp'
     execute_tool_change: false
   part_registration:
