--- a/crs_application/config/main/motion_planning/MP_config.yaml
+++ b/crs_application/config/main/motion_planning/MP_config.yaml
@@ -1,5 +1,5 @@
 general:
-  use_trajopt_freespace: false
+  use_trajopt_freespace: true
   use_trajopt_surface: false
   default_to_descartes: true
   simplify_start_end_freespace: true
@@ -9,7 +9,7 @@ general:
   tool0_frame: "tool0"
   required_tool_vel: true
   max_joint_vel: 0.3
-  max_joint_vel_mult: 1.5
+  max_joint_vel_mult: 2.2
   max_surface_dist: 0.15
   max_joint_acc: 0.8
   add_approach_and_retreat: true
@@ -79,7 +79,7 @@ trajopt_freespace:
   special_collision_costs:
     - link1: "eoat_link"
       link2: "part_link"
-      distance: 0.02
+      distance: 0.05
       cost: 10.0
     - link1: "eoat_link"
       link2: "robot_frame"
