--- a/crs_application/config/main/motion_planning/MP_config.yaml
+++ b/crs_application/config/main/motion_planning/MP_config.yaml
@@ -1,6 +1,6 @@
 general:
   use_trajopt_freespace: true
-  use_trajopt_surface: false
+  use_trajopt_surface: true
   default_to_descartes: true
   simplify_start_end_freespace: true
   manipulator: "manipulator"
@@ -9,7 +9,7 @@ general:
   tool0_frame: "tool0"
   required_tool_vel: true
   max_joint_vel: 0.3
-  max_joint_vel_mult: 2.2
+  max_joint_vel_mult: 1.8
   max_surface_dist: 0.15
   max_joint_acc: 0.8
   add_approach_and_retreat: true
@@ -18,12 +18,12 @@ general:
   combine_strips: true
   global_descartes: true
 descartes:
-  axial_step: 0.5 # Pi/36
+  axial_step: 0.4 # Pi/36
   collision_safety_margin: 0.00
-  additional_tool_offset: [0.0, 0.0, 0.005, 0.0, 0.0, 0.0]
+  additional_tool_offset: [0.0, 0.0, 0.004, 0.0, 0.0, 0.0]
 trajopt_surface:
-  smooth_velocities: false
-  smooth_accelerations: false
+  smooth_velocities: true
+  smooth_accelerations: true
   smooth_jerks: false
   longest_valid_segment_fraction: 1.0
   longest_valid_segment_length: 1.0
@@ -33,14 +33,6 @@ trajopt_surface:
     enabled: true
     buffer_margin: 0.02
   special_collision_costs:
-    - link1: "eoat_link"
-      link2: "part_link"
-      distance: 0.03
-      cost: 10.0
-    - link1: "sander_intermediate_link"
-      link2: "part_link"
-      distance: 0.03
-      cost: 10.0
     - link1: "robot_stand"
       link2: "upper_arm_link"
       distance: 0.03
