Minor config changes

--- a/crs_application/config/main/motion_planning/MP_config.yaml
+++ b/crs_application/config/main/motion_planning/MP_config.yaml
@@ -18,7 +18,7 @@ general:
   combine_strips: true
   global_descartes: true
 descartes:
-  axial_step: 0.4 # Pi/36
+  axial_step: 0.4
   collision_safety_margin: 0.00
   additional_tool_offset: [0.0, 0.0, 0.004, 0.0, 0.0, 0.0]
 trajopt_surface:
