--- a/crs_process_data/data/surrogate1/toolpaths/part_2/crs.yaml
+++ b/crs_process_data/data/surrogate1/toolpaths/part_2/crs.yaml
@@ -7,7 +7,7 @@ crs:
       joint_position: [-1.8444, -1.85261, -1.6167, -1.6665, 0.8773, -0.9489]
     process_path:
       tool_speed: 0.1
-      offset_pose: [0.0, 0.0, 0.00, 0.0, 0.0, 0.0]
+      offset_pose: [0.0, 0.0, 0.028, 0.0, 0.0, 0.0]
       retreat_dist: 0.01
       approach_dist: 0.01
       tool_frame: sander_center_link
@@ -36,7 +36,7 @@ crs:
     cartesian_path_tolerance: [0.015, 0.015, 0.05, 0.15, 0.15, 0.15]
     cartesian_goal_tolerance: [0.01, 0.01, 0.035, 0.05, 0.05, 0.05]
     force_tolerance: 10
-    force_controlled_trajectories: true
+    force_controlled_trajectories: false
     ur_tool_change_script: 'simpleMove.urp'
     execute_tool_change: false
   part_registration:
@@ -48,7 +48,7 @@ crs:
   part_rework: 
     scan_poses:
       - pose: [0.111, -0.972, 0.307, 3.049, -0.064, -0.074]
-      - pose: [0.638, -0.913, 0.258, 2.8819846, 0.1335439, -1.1955488]
+      - pose: [0.55, -0.913, 0.258, 2.8819846, 0.1335439, -1.1955488]
       - pose: [0.334, -1.005, 0.273, 3.067, -0.042, 0.175]
       - pose: [0.701, -0.402, 0.189, 2.393, 0.115, -0.280]
     tool_frame: "camera_link_optical" 
