--- a/crs_application/config/main/motion_planning/MP_config.yaml
+++ b/crs_application/config/main/motion_planning/MP_config.yaml
@@ -11,17 +11,19 @@ general:
   max_joint_vel: 0.3
   max_joint_vel_mult: 1.80
   max_surface_dist: 0.15
+  max_rotation_rate: 3.0
   max_joint_acc: 0.8
   add_approach_and_retreat: true
-  minimum_raster_length: 4
-  reachable_radius: 1.25
+  minimum_raster_length: 5
+  reachable_radius: 1.35
   trajopt_verbose_output: false
   combine_strips: true
   global_descartes: true
 descartes:
-  axial_step: 0.4
+  axial_step: 0.1
   collision_safety_margin: 0.00
   additional_tool_offset: [0.0, 0.0, 0.004, 0.0, 0.0, 0.0]
+  joint_min_vals: [-0.1, -0.1, -0.4, -0.1, 0.1, -0.1]
 trajopt_surface:
   smooth_velocities: true
   smooth_accelerations: true
@@ -32,11 +34,15 @@ trajopt_surface:
   waypoints_critical: true
   collision_cost:
     enabled: true
-    buffer_margin: 0.02
+    buffer_margin: 0.03
   special_collision_costs:
     - link1: "robot_stand"
       link2: "upper_arm_link"
       distance: 0.03
+      cost: 10.0
+    - link1: "eoat_link"
+      link2: "forearm_link"
+      distance: 0.05
       cost: 10.0
   collision_constraint:
     enabled: false
@@ -54,12 +60,16 @@ ompl:
   collision_safety_margin: 0.01
   planning_time: 120.0
   simplify: true
-  range: 0.25
-  num_threads: 4
+  # range: 0.25
+  range: 0.15
+  num_threads: 8
   max_solutions: 10
   default_n_output_states: 20
-  longest_valid_segment_fraction: 0.01
+  longest_valid_segment_fraction: 0.05
   longest_valid_segment_length: 0.5
+  retry_failure: true
+  retry_distance: 0.002
+  retry_at_zero: true
 trajopt_freespace:
   smooth_velocities: true
   smooth_accelerations: true
