--- a/crs_application/config/main/crs.yaml
+++ b/crs_application/config/main/crs.yaml
@@ -1,10 +1,11 @@
 crs:
   general: {}
   motion_planning:
-    pre_move_home: false
+    pre_move_home: true
     home_position:
       joint_names: [shoulder_pan_joint, shoulder_lift_joint, elbow_joint, wrist_1_joint, wrist_2_joint, wrist_3_joint]
-      joint_position: [-0.9644, -1.3617, 2.0724, -0.7108, -0.9640, 0.7994]
+#      joint_position: [-0.9644, -1.3617, 2.0724, -0.7108, -0.9640, 0.7994]
+      joint_position: [1.03515, 0.14504, -2.359510, -1.8396, -1.00758, 0.785747]
     process_path:
       tool_speed: 0.1
       offset_pose: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0] # [px, py, pz, rx, ry, rz] relative to default tool
